chart/templates/todo-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  labels:
    app: todo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: meryamcaramel/todomanagement
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
