chart/templates/todo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: todo-service
spec:
  selector:
      app: todo-service
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
